# aqueduct

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  atomic_build.py  pyproject.toml  setup.py
.github/workflows/: python-app.yml  wheels.yml
aqueduct/: __init__.py  exceptions.py  flow.py  handler.py  logger.py  multiprocessing.py  queues.py  shm.py  task.py  utils.py  worker.py
aqueduct/integrations/: aiohttp.py  zero.py
aqueduct/metrics/: collect.py  export.py  manager.py  processes.py  queue.py  task.py  timer.py
aqueduct/shm/: __init__.py  base.py  bytes.py  mixin.py  numpy.py
aqueduct/sockets/: connection_pool.py  flow.py  flow_server.py  protocol.py
docs/: batching.rst  concurrency.rst  example.rst  faq.rst  fundamentals.rst  getting_started.rst  logging.rst  metrics.rst  priority_queues.rst  sentry.rst  share_memory.rst  troubleshooting.rst  video.rst  videos.rst
examples/aiohttp/demoapp/: README.md  requirements.txt
examples/flask/demoapp/: README.md  requirements.txt
requirements/: dev.txt  test.txt
tests/: conftest.py
tests/aqueduct/: exceptions.py  handler.py  logger.py
tests/aqueduct/integrations/: __init__.py
tests/aqueduct/metrics/: __init__.py  base.py
tests/benchmarks/: bench_queue_transfer.py  utils.py
tests/benchmarks/bench_service/: .dockerignore  Dockerfile  README.md  docker-compose.yaml
tests/requirements/: test.txt
tests/unit/: conftest.py  test_flow.py  test_shm.py  test_sockets.py  test_task.py  test_worker.py
tests/unit/integrations/: test_aiohttp.py
(+31 files in other folders)
